// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> renders a progress bar 1`] = `
<div
  className="wrapper_fyg7bf"
>
  <div
    className="bar_xmolfv-o_O-bar_leading_satysr-o_O-bar_trailing_j3624r"
  >
    <div
      className="bar_xmolfv-o_O-bar_leading_satysr-o_O-bar_trailing_j3624r-o_O-progress_hk8cyc"
      style={
        Object {
          "width": "10%",
        }
      }
    />
  </div>
</div>
`;

exports[`<ProgressBar /> renders leading 1`] = `
<div
  className="wrapper_fyg7bf"
>
  <div
    className="bar_xmolfv-o_O-bar_trailing_j3624r"
  >
    <div
      className="bar_xmolfv-o_O-bar_trailing_j3624r-o_O-progress_hk8cyc"
      style={
        Object {
          "width": "50%",
        }
      }
    />
  </div>
</div>
`;

exports[`<ProgressBar /> renders trailing 1`] = `
<div
  className="wrapper_fyg7bf"
>
  <div
    className="bar_xmolfv-o_O-bar_leading_satysr"
  >
    <div
      className="bar_xmolfv-o_O-bar_leading_satysr-o_O-progress_hk8cyc"
      style={
        Object {
          "width": "50%",
        }
      }
    />
  </div>
</div>
`;
